{{$NEXT}}

0.6.1  2021-06-14T13:16:33+12:00
    - Improved Dtd Handling #30
      -- Added raw class xmlNotation,
      -- Added API class LibXML::Dtd::Notation
      -- Added LibXML::Dtd methods:
         --- notations() entities(), element-declarations(), attribute-declarations()
             getNotation(), getEntity(), getElementDeclaration(),
             getAttrDeclaration(), getNodeDeclaration()
      -- Changed LibXML::Dtd repr from 'CStruct' to default, so that it may
         contain additional attributes.
      -- Rename classes:
         --- LibXML::Dtd::Attr -> LibXML::Dtd::AttrDecl and
         --- LibXML::Dtd::Element -> LibXML::Dtd::ElementDecl
         --- LibXML::Entity -> LibXML::Dtd::Entity
      -- Add  LibXML::Dtd elements() method
    - Removed some module loading work-arounds for Rakudo < 2019.03
    - Fixed memory leaks in $doc.setDocumentElement and document parse failure #55
    - Fixed segfault in unlinking DtD #56
    - Fixed valgrind errors in t/07dtd.t. Specifically, $doc.replaceChild($dtd), which
      should be a no-op.
    - Fix GC on entities. Don't attempt to free predefined entities.

0.6.0  2021-05-29T09:37:12+12:00
    - Fix attribute isId() method to return Bool, as documented.
    - Integration with W3C::DOM interface roles:
      -- Implementation: add createDocumentType(), hasFeature()
      -- Attr: add specified() [NYI]
      -- Node: add isSupported(), localName()
      -- Moved attributes() and hasAttributes from Element to Node
      -- NamedNodeMap: add length() method
      -- CDATASection: add splitText() [NYI]
      -- DocumentType: add entities(), notations() internalSubset [all NYI]
      -- Entity: add publicId(), systemId() and notationName() methods
      -- ProcessingInstruction: add data() method
      -- Text: add splitText() method [NYI]
    - Fixes to DtD handling #54:
      -- $doc.setExternalSubset no longer removes internal subset
      -- Reimplement $doc.setInternalSubset using xmlCreateInSubset().